# threadcount

./: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg
docs/: requirements.txt
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  installation.rst  procedure_explore_results.rst  procedure_fit_lines.rst  procedure_open_cube.rst  procedure_outflow_extent.rst  procedure_rcparams.rst
docs/source/api/: threadcount.fit.DEFAULT_FIT_INFO.rst  threadcount.fit.FLAM16.rst  threadcount.fit.FLOAT_FMT.rst  threadcount.fit.RecursiveArray.rst  threadcount.fit.ResultDict.rst  threadcount.fit.choose_model_aic.rst  threadcount.fit.choose_model_aic_single.rst  threadcount.fit.collect_stats.rst  threadcount.fit.de_redshift.rst  threadcount.fit.extract_spaxel_info.rst  threadcount.fit.extract_spaxel_info_mc.rst  threadcount.fit.get_SNR_map.rst  threadcount.fit.get_SignalBW_idx.rst  threadcount.fit.get_aic.rst  threadcount.fit.get_gcomponent_comparison.rst  threadcount.fit.get_header_stats.rst  threadcount.fit.get_index.rst  threadcount.fit.get_model_keys.rst  threadcount.fit.get_ngaussians.rst  threadcount.fit.get_param_values.rst  threadcount.fit.get_reg_image.rst  threadcount.fit.get_region.rst  threadcount.fit.interactive_lower_threshold.rst  threadcount.fit.interactive_user_choice.rst  (+65 more)
script/: eso120_10x10_thread_runner_fast_nelder.py  eso120_10x10_thread_runner_fast_nelder_sii.py
src/threadcount/: __init__.py  exceptions.py  fit.py  lines.py  lmfit_ext.py  models.py  mpdaf_ext.py  utils.py
tests/: test_model_function.py  test_models.py
(+23 files in other folders)
