[metadata]
name = threadcount
version = attr: threadcount.__version__
author = FisherAstronomy
author_email = dfisher@swin.edu.au
description = Astronomy data cube spectral line fitting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FisherAstronomy/threadcount
project_urls =
    Bug Tracker = https://github.com/FisherAstronomy/threadcount/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    # lmfit >= 1.0.1
    matplotlib >= 3.4.3
    mpdaf >= 3.5
    numpy >= 1.17.0
    astropy >= 3.2.1

[options.packages.find]
where = src
